--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crypto-dashboard",
   "version": "0.1.0",
-  "engines": {"node":"18.9.0"},
+  "engines": {"node":"18.9.0", "npm": "8.5.5"},
   "private": true,
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
